# test-fmt

./: dpll.opam  dune-project  sat.opam
lib/: canonical.ml  dpll.ml  dune  formula.ml  sat.ml  simple_sat.ml
