(lang dune 2.8)

(name sat)

(version 0.1.0)

(maintainers "Finley McIlwaine")

(authors "Finley McIlwaine")

; (source (github FinleyMcIlwaine/bril-ocaml))
; (homepage "https://github.com/FinleyMcIlwaine/bril-ocaml")
; (bug_reports "https://github.com/FinleyMcIlwaine/bril-ocaml/issues")

(generate_opam_files true)

(package
 (name sat)
 (synopsis
  "A library implementing a satisifiability algorithm"))
